added placeholder homepage format

--- a/index.html
+++ b/index.html
@@ -1,8 +1,39 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>My Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>TEST!</h1>
+    <div class="banner">
+      <h1>James!</h1>
+    </div>
+    <div style="height: 10vh;"></div>
+    <div class="container">
+      <div class="box" style="--box-width: 30%; --box-height: 50vh;">
+        <div class="header-box">
+          <h2>About Me</h2>
+        </div>
+        <div class="text-box">
+          <p>Placeholder 1</p>
+        </div>
+      </div>
+      <div class="box" style="--box-width: 30%; --box-height: 50vh;">
+        <div class="header-box">
+          <h2>Current Projects</h2>
+        </div>
+        <div class="text-box">
+          <p>Placeholder 2</p>
+        </div>
+      </div>
+      <div class="box" style="--box-width: 30%; --box-height: 50vh;">
+        <div class="header-box">
+          <h2>Past Projects</h2>
+        </div>
+        <div class="text-box">
+          <p>Placeholder 3</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
