added base website format

--- a/research.html
+++ b/research.html
@@ -9,10 +9,10 @@
 <body>
 
   <div class="banner">
-    <button class="button selected" onclick="window.location.href='index.html'">About</button>
+    <button class="button" onclick="window.location.href='index.html'">About</button>
     <button class="button" onclick="window.location.href='resume.html'">Resume</button>
     <button class="button" onclick="window.location.href='projects.html'">Projects</button>
-    <button class="button" onclick="window.location.href='research.html'">Research</button>
+    <button class="button selected" onclick="window.location.href='research.html'">Research</button>
   </div>
 
   <div class="side-box">
@@ -39,7 +39,7 @@
   </div>
 
   <div class="main-box" style="margin-left: 5vw;">
-    <h1>About Me</h1>
+    <h1>Research</h1>
   </div>
   </body>
 </html>
