fix formatting error in sidebar

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <div class="text-box-container" style="height: 40%">
       <div class="text-box" style="width: 60%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
+        <h2>Hi! I'm James</h2>
         <p>info box</p>
       </div>
 
