--- a/research.html
+++ b/research.html
@@ -21,17 +21,17 @@
     <h3>Computer Engineering MEng</h3>
     <h3>University of Toronto</h3>
 
-    <div class="content-box" style="margin-top: 5vh; width: 100%;">
+    <div class="content-box" style="margin-top: 5vh; width: 100%; height: 6%;">
       <img src="static/linkedin.png" alt="LinkedIn" style="width: auto; height: 100%;">
       <p>linkedin.com/in/jamesxdu/</p>
     </div>
 
-    <div class="content-box" style="margin-top: 3vh; width: 100%;">
+    <div class="content-box" style="margin-top: 3vh; width: 100%; height: 6%;">
       <img src="static/mail.png" alt="Email" style="width: auto; height: 100%;">
       <p>jay.du@mail.utoronto.ca</p>
     </div>
 
-    <div class="content-box" style="margin-top: 3vh; width: 100%;">
+    <div class="content-box" style="margin-top: 3vh; width: 100%; height: 6%;">
       <img src="static/github-mark.png" alt="GitHub" style="width: auto; height: 70%; padding-left: 1vh; padding-right: 1vh;">
       <p>github.com/jdxiao</p>
     </div>
@@ -39,7 +39,7 @@
   </div>
 
   <div class="main-box" style="margin-left: 5vw;">
-    <h1>Research</h1>
+    <h1 style="text-align: center;">Research</h1>
   </div>
   </body>
 </html>
