add draft bio to about page

--- a/index.html
+++ b/index.html
@@ -44,20 +44,30 @@
     <div class="text-box-container" style="height: 40%">
       <div class="text-box" style="width: 60%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
         <h2>Hi! I'm James</h2>
-        <p>info box</p>
+        <p style="margin-top: 2vh">I'm a Master of Engineering student in the Department of Electrical and Computer Engineering
+          at the University of Toronto. I'm pursuing a dual emphasis in Data Analytics and Machine Learning
+          and Entrepreneurship. I'm passionate about using technology - specifically machine learning - to solve
+          real-world problems.
+        </p>
+
+        <p style="margin-top: 2vh">I'm currently working on several projects in the field of Natural Language Processing
+          and its applications in improving verbal communication. My primary research focus at the moment concerns the 
+          impact of Large Language Models on the quality engineering education. Alongside my projects and research, I'm 
+          also working as a Teaching Assistant for an engineering Python programming course.
+        </p>
       </div>
 
       <div class="text-box" style="width: 27%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
-        <p>education box</p>
+        <h2>Education</h2>
       </div>
     </div>
 
     <div class="text-box-container" style="height: 26%; margin-top: 9vh;">
       <div class="text-box" style="width: 50%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
-        <p>interests box</p>
+        <h2>Interests</h2>
       </div>
       <div class="text-box" style="width: 37%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
-        <p>hobbies box</p>
+        <h2>Passions</h2>
       </div>
     </div>
 
