--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <h1 style="text-align: center;">About Me</h1>
 
     <div class="text-box-container" style="height: 40%">
-      <div class="text-box" style="width: 60%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
-        <h2>Hi! I'm James</h2>
+      <div class="text-box" style="width: 57%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
+        <h2>Hi! I'm James.</h2>
         <p style="margin-top: 2vh">I'm a Master of Engineering student in the Department of Electrical and Computer Engineering
           at the University of Toronto. I'm pursuing a dual emphasis in Data Analytics and Machine Learning
           and Entrepreneurship. I'm passionate about using technology - specifically machine learning - to solve
@@ -57,17 +57,40 @@
         </p>
       </div>
 
-      <div class="text-box" style="width: 27%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
-        <h2>Education</h2>
+      <div class="text-box" style="width: 31%; height: 100%; margin-top: 2vh; margin-left: 2vh; padding-left: 1.5vh">
+        <h2 style="padding-left: 2vh">Education</h2>
+        
+        <div class="content-box" style="margin-top: 2vh; width: 100%; height: 35%;">
+          <img src="static/grad.png" alt="Graduate" style="width: auto; height: 50%;">
+          <div class="text-box-2" style="width: 100%; height: 100%; padding-left: 1.5vh">
+            <h1>MEng Computer Engineering (present)</h1>
+            <p>Emphasis in Data Analytics and Machine Learning<br>
+            Emphasis in Entrepreneurship<br>
+            University of Toronto</p>
+          </div>
+        </div>
+
+        <div class="content-box" style="margin-top: 2vh; width: 100%; height: 35%;">
+          <img src="static/grad.png" alt="Graduate" style="width: auto; height: 50%;">
+          <div class="text-box-2" style="width: 100%; height: 100%; padding-left: 1.5vh;">
+            <h1>BASc Computer Engineering (2024)</h1>
+            <p>Minor in Artificial Intelligence<br>
+            Minor in Business<br>
+            University of Toronto</p>
+          </div>
+        </div>
+
       </div>
     </div>
 
     <div class="text-box-container" style="height: 26%; margin-top: 9vh;">
       <div class="text-box" style="width: 50%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
         <h2>Interests</h2>
+        <!-- machine learning, data analytics, natural language processing, applications of machine learning/artificial intelligence, engineering education -->
       </div>
       <div class="text-box" style="width: 37%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
         <h2>Passions</h2>
+        <!-- romantic era orchestral music, violin, fiction and poetry writing, pet rabbit -->
       </div>
     </div>
 
