--- a/resume.html
+++ b/resume.html
@@ -40,6 +40,45 @@
 
   <div class="main-box" style="margin-left: 5vw;">
     <h1 style="text-align: center;">Resume</h1>
-  </div>
+
+    <div class="text-box-container" style="height: 45%">
+      <div class="text-box" style="width: 30%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
+        <h2>Data Analytics</h2>
+      </div>
+
+      <div class="text-box" style="width: 30%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
+        <h2>Machine Learning</h2>
+      </div>
+
+      <div class="text-box" style="width: 30%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
+        <h2>Social Applications</h2>
+      </div>
+    </div>
+
+    <div class="text-box-container" style="height: 20%; margin-top: 9vh;">
+      
+      <div class="text-box" style="width: 15%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
+        <h2>Download</h2>
+        <div class="content-box" style="margin-top: 2vh; width: 100%; height: 35%;">
+          <img src="static/resume.png" alt="PDF" style="width: auto; height: 60%;">
+          <p>Resume</p>
+        </div>
+
+        <div class="content-box" style="width: 100%; height: 35%;">
+          <img src="static/cv.png" alt="PDF" style="width: auto; height: 60%;">
+          <p>CV</p>
+        </div>
+      </div>
+
+      <div class="text-box" style="width: 35%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
+        <h2>Skills</h2>
+      </div>
+
+      <div class="text-box" style="width: 35%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
+        <h2>Languages</h2>
+      </div>
+
+    </div>
+
   </body>
 </html>
