--- a/projects.html
+++ b/projects.html
@@ -23,17 +23,17 @@
 
     <div class="content-box" style="margin-top: 5vh; width: 100%; height: 6%;">
       <img src="static/linkedin.png" alt="LinkedIn" style="width: auto; height: 100%;">
-      <p>linkedin.com/in/jamesxdu/</p>
+      <p><a href="https://www.linkedin.com/in/jamesxdu/" target="_blank">linkedin.com/in/jamesxdu/</a></p>
     </div>
 
     <div class="content-box" style="margin-top: 3vh; width: 100%; height: 6%;">
       <img src="static/mail.png" alt="Email" style="width: auto; height: 100%;">
-      <p>jay.du@mail.utoronto.ca</p>
+      <p><a href="mailto:jay.du@mail.utoronto.ca">jay.du@mail.utoronto.ca</a></p>
     </div>
 
     <div class="content-box" style="margin-top: 3vh; width: 100%; height: 6%;">
       <img src="static/github-mark.png" alt="GitHub" style="width: auto; height: 70%; padding-left: 1vh; padding-right: 1vh;">
-      <p>github.com/jdxiao</p>
+      <p><a href="https://github.com/jdxiao" target="_blank">github.com/jdxiao</a></p>
     </div>
 
   </div>
