--- a/resume.html
+++ b/resume.html
@@ -61,12 +61,12 @@
         <h2>Download</h2>
         <div class="content-box" style="margin-top: 2vh; width: 100%; height: 35%;">
           <img src="static/resume.png" alt="PDF" style="width: auto; height: 60%;">
-          <p>Resume</p>
+          <p><a href="static/resume.pdf" download="James_Du_Resume">Resume</a></p>
         </div>
 
         <div class="content-box" style="width: 100%; height: 35%;">
           <img src="static/cv.png" alt="PDF" style="width: auto; height: 60%;">
-          <p>CV</p>
+          <p><a href="static/cv.pdf" download="James_Du_CV">CV</a></p>
         </div>
       </div>
 
