add base layout for projects tab

--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,25 @@
 
   <div class="main-box" style="margin-left: 5vw;">
     <h1 style="text-align: center;">Projects</h1>
+
+    <div class="text-box-container" style="height: 76%">
+      <div class="text-box" style="width: 25%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
+        <h2>CareBrew</h2>
+        <p style="margin-top: 2vh">CareBrew is...</p>
+      </div>
+
+      <div class="text-box" style="width: 40%; height: 100%; margin-top: 2vh; margin-left: 3vh">
+        <h2>Project Demo</h2>
+      </div>
+
+      <div class="text-box" style="width: 15%; height: 100%; margin-top: 2vh; margin-left: 3vh">
+        <h2>Project Directory</h2>
+        <p style="margin-top: 2vh">CareBrew - Current</p>
+        <p style="margin-top: 2vh">Project 1</p>
+        <p style="margin-top: 2vh">Project 2</p>
+        <p style="margin-top: 2vh">Project 3</p>
+      </div>
+    </div>
   </div>
   </body>
 </html>
