--- a/research.html
+++ b/research.html
@@ -40,6 +40,26 @@
 
   <div class="main-box" style="margin-left: 5vw;">
     <h1 style="text-align: center;">Research</h1>
+
+    <div class="text-box-container" style="height: 100%; width: 100%">
+
+      <div class="text-box-container-2" style="height: 100%; width: 25%;">
+        <div class="text-box" style="width: 100%; height: 30%;">
+          <h2>Thesis</h2>
+          <p style="margin-top: 2vh">TBD</p>
+        </div>
+
+        <div class="text-box" style="width: 100%; height: 50%;">
+          <h2>Background</h2>
+        </div>
+      </div>
+
+      <div class="text-box" style="width: 70%; height: 91.5%; margin-left: 8vh;">
+        <h2>Impact of Large Language Models on Engineering Education</h2>
+        <p style="margin-top: 2vh">TBD</p>
+      </div>
+
+    </div>
   </div>
   </body>
 </html>
