update about me interests and passions

--- a/index.html
+++ b/index.html
@@ -84,12 +84,65 @@
     </div>
 
     <div class="text-box-container" style="height: 26%; margin-top: 9vh;">
+
       <div class="text-box" style="width: 50%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
         <h2>Interests</h2>
-        <!-- machine learning, data analytics, natural language processing, applications of machine learning/artificial intelligence, engineering education -->
+        <div class="text-box-container" style="height: 100%; width: 100%;">
+          <div class ="text-box-container-2" style="height: 100%; width: 50%;">
+            <div class="content-box" style="width: 100%; height: 35%; margin-top: 2vh;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Machine Learning</p>
+            </div>
+            <div class="content-box" style="width: 100%; height: 35%;;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Natural Language Processing</p>
+            </div>
+            <div class="content-box" style="width: 100%; height: 35%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Sequential Data Modelling</p>
+            </div>
+          </div>
+          <div class ="text-box-container-2" style="height: 100%; width: 50%;">
+            <div class="content-box" style="width: 100%; height: 35%; margin-top: 2vh;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Social Applications of Technology</p>
+            </div>
+            <div class="content-box" style="width: 100%; height: 35%;;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Engineering Education</p>
+            </div>
+            <div class="content-box" style="width: 100%; height: 35%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Data Analytics</p>
+            </div>
+          </div>
+        </div>
       </div>
+
       <div class="text-box" style="width: 37%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
         <h2>Passions</h2>
+        <div class="text-box-container" style="height: 100%; width: 100%;">
+          <div class ="text-box-container-2" style="height: 100%; width: 45%;">
+            <div class="content-box" style="width: 100%; height: 50%; margin-top: 2vh;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Violin (ARCT in Violin Performance)</p>
+            </div>
+            <div class="content-box" style="width: 100%; height: 50%;;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Romantic Era orchestral music</p>
+            </div>
+          </div>
+          <div class ="text-box-container-2" style="height: 100%; width: 45%;">
+            <div class="content-box" style="width: 100%; height: 40%; margin-top: 2vh;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Writing fiction and poetry</p>
+            </div>
+            <div class="content-box" style="width: 100%; height: 40%;;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">My pet bunny</p>
+            </div>
+          </div>
+        </div>
         <!-- romantic era orchestral music, violin, fiction and poetry writing, pet rabbit -->
       </div>
     </div>
