add project headings to projects

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             <div class="content-box" style="width: 100%; height: 40%;;">
               <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
-              <p style="margin-left: 1vh; padding: 0; line-height: 1;">My pet bunny</p>
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">My pet bunny!</p>
             </div>
           </div>
         </div>
