--- a/projects.html
+++ b/projects.html
@@ -54,9 +54,9 @@
       <div class="text-box" style="width: 15%; height: 100%; margin-top: 2vh; margin-left: 3vh">
         <h2>Directory</h2>
         <p class="directory-button" id="carebrew-button" style="margin-top: 2vh; cursor: pointer;" onclick="showProject('CareBrew', this)">CareBrew</p>
-        <p class="directory-button" style="margin-top: 2vh; cursor: pointer;" onclick="showProject('Project1', this)">Project 1</p>
-        <p class="directory-button" style="margin-top: 2vh; cursor: pointer;" onclick="showProject('Project2', this)">Project 2</p>
-        <p class="directory-button" style="margin-top: 2vh; cursor: pointer;" onclick="showProject('Project3', this)">Project 3</p>
+        <p class="directory-button" style="margin-top: 2vh; cursor: pointer;" onclick="showProject('Project1', this)">Real-Time Conversation Assistant</p>
+        <p class="directory-button" style="margin-top: 2vh; cursor: pointer;" onclick="showProject('Project2', this)">FinePrint</p>
+        <p class="directory-button" style="margin-top: 2vh; cursor: pointer;" onclick="showProject('Project3', this)">JC Jump</p>
       </div>
     </div>
   </div>
@@ -87,21 +87,21 @@
           break;
         case 'Project1':
           projectContent = `
-            <h2>Project 1</h2>
+            <h2>Real-Time Conversation Assistant</h2>
             <p style="margin-top: 2vh;">Project 1 is about...</p>
           `;
           demoImageSrc = 'static/project1.png';
           break;
         case 'Project2':
           projectContent = `
-            <h2>Project 2</h2>
+            <h2>FinePrint</h2>
             <p style="margin-top: 2vh;">Project 2 involves...</p>
           `;
           demoImageSrc = 'static/project2.png';
           break;
         case 'Project3':
           projectContent = `
-            <h2>Project 3</h2>
+            <h2>JC Jump</h2>
             <p style="margin-top: 2vh;">Project 3 explores...</p>
           `;
           demoImageSrc = 'static/project3.png';
