--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
         <h2 style="padding-left: 2vh">Education</h2>
         
         <div class="content-box" style="margin-top: 3vh; width: 100%; height: 35%;">
-          <img src="static/grad.png" alt="Graduate" style="width: auto; height: 50%;">
+          <img src="static/grad.png" alt="Graduate" style="width: auto; height: 38%;">
           <div class="text-box-2" style="width: 100%; height: 100%; padding-left: 1.5vh">
             <h1>MEng Computer Engineering (present)</h1>
-            <p>Emphasis in Data Analytics and Machine Learning<br>
+            <p>Emphasis in Data Analytics & Machine Learning<br>
             Emphasis in Entrepreneurship<br>
             University of Toronto</p>
           </div>
         </div>
 
-        <div class="content-box" style="margin-top: 4vh; width: 100%; height: 35%;">
-          <img src="static/grad.png" alt="Graduate" style="width: auto; height: 50%;">
+        <div class="content-box" style="margin-top: 3vh; width: 100%; height: 35%;">
+          <img src="static/grad.png" alt="Graduate" style="width: auto; height: 38%;">
           <div class="text-box-2" style="width: 100%; height: 100%; padding-left: 1.5vh;">
             <h1>BASc Computer Engineering (2024)</h1>
             <p>Minor in Artificial Intelligence<br>
