minor spacing update in research.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <p style="margin-top: 2vh">I'm currently working on several projects in the field of Natural Language Processing
           and its applications in improving verbal communication. My primary research focus at the moment concerns the 
-          impact of Large Language Models on the quality engineering education. Alongside my projects and research, I'm 
+          impact of Large Language Models on the quality of engineering education. Alongside my projects and research, I'm 
           also working as a Teaching Assistant for an engineering Python programming course.
         </p>
       </div>
