--- a/research.html
+++ b/research.html
@@ -41,7 +41,7 @@
   <div class="main-box" style="margin-left: 5vw;">
     <h1 style="text-align: center;">Research</h1>
 
-    <div class="text-box-container" style="height: 100%; width: 100%">
+    <div class="text-box-container" style="height: 83%; width: 97.45%; padding: 2vh;">
 
       <div class="text-box-container-2" style="height: 100%; width: 25%;">
         <div class="text-box" style="width: 100%; height: 30%;">
@@ -49,7 +49,7 @@
           <p style="margin-top: 2vh">TBD</p>
         </div>
 
-        <div class="text-box" style="width: 100%; height: 50%;">
+        <div class="text-box" style="width: 100%; height: 50%; margin-top: 2vh;">
           <h2>Background</h2>
         </div>
       </div>
