updated resume section

--- a/resume.html
+++ b/resume.html
@@ -44,14 +44,64 @@
     <div class="text-box-container" style="height: 45%">
       <div class="text-box" style="width: 30%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
         <h2>Data Analytics</h2>
+        <div class ="text-box-container-2" style="height: 100%; width: 100%; margin-top: 2vh;">
+          <div class="content-box" style="width: 100%;">
+            <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+            <p style="margin-left: 1vh; padding: 0; line-height: 1;">Pursuing a Master's degree with an emphasis in Data Analytics.</p>
+          </div>
+          <div class="content-box" style="width: 100%;">
+            <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+            <p style="margin-left: 1vh; padding: 0; line-height: 1;">Proficient in Pandas, NumPy, and SQL for data querying, manipulation, and analysis.</p>
+          </div>
+          <div class="content-box" style="width: 100%;">
+            <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+            <p style="margin-left: 1vh; padding: 0; line-height: 1;">Experience working with large-scale datasets using cloud-based AWS services, including S3, Redshift, Lambda, and EMR for storage, querying, and distributed data processing.</p>
+          </div>
+        </div>
       </div>
 
       <div class="text-box" style="width: 30%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
         <h2>Machine Learning</h2>
+        <div class ="text-box-container-2" style="height: 100%; width: 100%; margin-top: 2vh;">
+          <div class="content-box" style="width: 100%;">
+            <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+            <p style="margin-left: 1vh; padding: 0; line-height: 1;">Pursuing a Master's degree with an emphasis in Machine Learning.</p>
+          </div>
+          <div class="content-box" style="width: 100%;">
+            <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+            <p style="margin-left: 1vh; padding: 0; line-height: 1;">Proficient in Python (TensorFlow, PyTorch, Scikit-learn).</p>
+          </div>
+          <div class="content-box" style="width: 100%;">
+            <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+            <p style="margin-left: 1vh; padding: 0; line-height: 1;">Experience in model deployment with Flask, FastAPI, Docker, and cloud platforms (AWS).</p>
+          </div>
+          <div class="content-box" style="width: 100%;">
+            <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+            <p style="margin-left: 1vh; padding: 0; line-height: 1;">Proficient in designing, implementing, and fine-tuning Neural Networks.</p>
+          </div>
+          <div class="content-box" style="width: 100%;">
+            <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+            <p style="margin-left: 1vh; padding: 0; line-height: 1;">Experience with transformer models (e.g., BERT, GPT) for Natural Language Processing (NLP) tasks.</p>
+          </div>
+        </div>
       </div>
 
       <div class="text-box" style="width: 30%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
         <h2>Social Applications</h2>
+        <div class ="text-box-container-2" style="height: 100%; width: 100%; margin-top: 2vh;">
+          <div class="content-box" style="width: 100%;">
+            <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+            <p style="margin-left: 1vh; padding: 0; line-height: 1;">Pursuing a Master's degree with an emphasis in Data Analytics.</p>
+          </div>
+          <div class="content-box" style="width: 100%;">
+            <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+            <p style="margin-left: 1vh; padding: 0; line-height: 1;">Proficient in Pandas, NumPy, and SQL for data querying, manipulation, and analysis.</p>
+          </div>
+          <div class="content-box" style="width: 100%;">
+            <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+            <p style="margin-left: 1vh; padding: 0; line-height: 1;">Experience working with large-scale datasets using cloud-based AWS services, including S3, Redshift, Lambda, and EMR for storage, querying, and distributed data processing.</p>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -72,10 +122,76 @@
 
       <div class="text-box" style="width: 35%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
         <h2>Skills</h2>
+        <div class="text-box-container" style="height: 100%; width: 100%; margin-top: 2vh;">
+          <div class ="text-box-container-2" style="height: 100%; width: 45%;">
+            <div class="content-box" style="width: 100%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Oral and Written Communication</p>
+            </div>
+            <div class="content-box" style="width: 100%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Collaboration in Interdisciplinary Teams</p>
+            </div>
+          </div>
+          <div class ="text-box-container-2" style="height: 100%; width: 45%;">
+            <div class="content-box" style="width: 100%; height: 45%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Adaptability and Flexibility</p>
+            </div>
+            <div class="content-box" style="width: 100%; height: 50%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Creativity in Problem Solving</p>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="text-box" style="width: 35%; height: 100%; margin-top: 2vh; margin-left: 2vh;">
         <h2>Languages</h2>
+        <div class="text-box-container" style="height: 100%; width: 100%; margin-top: 2vh;">
+          <div class ="text-box-container-2" style="height: 100%; width: 30%;">
+            <div class="content-box" style="width: 100%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Python</p>
+            </div>
+            <div class="content-box" style="width: 100%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">SQL</p>
+            </div>
+            <div class="content-box" style="width: 100%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">JavaScript</p>
+            </div>
+          </div>
+          <div class ="text-box-container-2" style="height: 100%; width: 30%;">
+            <div class="content-box" style="width: 100%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">C/C++</p>
+            </div>
+            <div class="content-box" style="width: 100%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Kotlin</p>
+            </div>
+            <div class="content-box" style="width: 100%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">HTML/CSS</p>
+            </div>
+          </div>
+          <div class ="text-box-container-2" style="height: 100%; width: 30%;">
+            <div class="content-box" style="width: 100%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Java</p>
+            </div>
+            <div class="content-box" style="width: 100%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">GO</p>
+            </div>
+            <div class="content-box" style="width: 100%;">
+              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">MATLAB</p>
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
