--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
               <p style="margin-left: 1vh; padding: 0; line-height: 1;">Machine Learning</p>
             </div>
-            <div class="content-box" style="width: 100%; height: 35%;;">
+            <div class="content-box" style="width: 100%; height: 35%;">
               <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
               <p style="margin-left: 1vh; padding: 0; line-height: 1;">Natural Language Processing</p>
             </div>
@@ -107,7 +107,7 @@
               <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
               <p style="margin-left: 1vh; padding: 0; line-height: 1;">Social Applications of Technology</p>
             </div>
-            <div class="content-box" style="width: 100%; height: 35%;;">
+            <div class="content-box" style="width: 100%; height: 35%;">
               <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
               <p style="margin-left: 1vh; padding: 0; line-height: 1;">Engineering Education</p>
             </div>
@@ -127,7 +127,7 @@
               <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
               <p style="margin-left: 1vh; padding: 0; line-height: 1;">Violin (ARCT in Violin Performance)</p>
             </div>
-            <div class="content-box" style="width: 100%; height: 50%;;">
+            <div class="content-box" style="width: 100%; height: 50%;">
               <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
               <p style="margin-left: 1vh; padding: 0; line-height: 1;">Romantic Era orchestral music</p>
             </div>
@@ -137,13 +137,12 @@
               <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
               <p style="margin-left: 1vh; padding: 0; line-height: 1;">Writing fiction and poetry</p>
             </div>
-            <div class="content-box" style="width: 100%; height: 40%;;">
+            <div class="content-box" style="width: 100%; height: 40%;">
               <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
               <p style="margin-left: 1vh; padding: 0; line-height: 1;">My pet bunny!</p>
             </div>
           </div>
         </div>
-        <!-- romantic era orchestral music, violin, fiction and poetry writing, pet rabbit -->
       </div>
     </div>
 
